other_data/devops/v3/cloud/application/overlays/dev/replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-management
spec:
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-op
spec:
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-exam
spec:
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-foundation
spec:
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-teach
spec:
  replicas: 1


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-management
spec:
  replicas: 1

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-preview
spec:
  replicas: 1
