other_data/devops/v3/cloud/application/overlays/dev/ingress-file-preview.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: file-preview
  namespace: edu-cloud-dev
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/cache-enable: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    # nginx.ingress.kubernetes.io/configuration-snippet: |
    # rewrite /apis(.*) /$1 break;
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # tls:
  #   - hosts:
  #     - dev-edu-console.deepblueai.com
  #     secretName: deepblueai-tls
  rules:
    - host: dev-edu-file-preview.deepblueai.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: file-preview
                port:
                  number: 8012
