other_data/devops/v3/cloud/application/overlays/dev/ingress-teacher-iot.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff-teacher-iot
  namespace: edu-cloud-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/cache-enable: "false"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: dev-edu-iot-teacher.deepblueai.com
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: bff-teacher-iot
                port:
                  number: 7102
